--- a/teste.html
+++ b/teste.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>git </title>
+    <link rel="stylesheet" type="text/css" href="css/estilo3.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos_form.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos_2.css">
+    <title> SGAE - Sistema de Gestão e Administração de Equipamentos </title>
+    <br>
+    <br>
+    <br>
 </head>
 <body>
+
 
 </body>
 </html>
