--- a/carcateristica_produto.html
+++ b/carcateristica_produto.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/estilo3.css">
-    <link rel="stylesheet" type="text/css" href="css/estilos_form.css">
     <link rel="stylesheet" type="text/css" href="css/estilos_2.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos_especial.css">
     <title> SGAE - Sistema de Gestão e Administração de Equipamentos </title>
     <br>
     <br>
@@ -32,25 +32,36 @@
 </ul>
 
 <!-- inicio codigo login -->
-<div class="main-login">
-    <div class="left-login">
-        <img src="refund-animate.svg" class="left-login-img" alt="desenho">
-    </div>
-    <div class="rigth-login"></div>
-    <div class="card-login">git
-        <h1>LOGIN </h1>
-        <div class="textfield">
-            <label for="Usuario"> Usuário </label>
-            <input type="text" name="usuario" placeholder="usuario">
+<section class="da">
+        <div class="container">
+            <div class="card">
+                <div class="imgBox">
+                    <img src="img/Router%20DUALBAND.png" alt="router" />
+                </div>
+            </div>
         </div>
-        <div class="textfield">
-            <label for="senha"> Senha </label>
-            <input type="password" name="senha" placeholder="Senha">
-        </div>
-        <button class="btn-login">Login </button>
-    </div>
+            <div class="card-login2">
+                <h1>Router DualBand LAN 10/100/1000Mbps </h1>
+                <div class="textfield">
+                    <p>
+                    <h3>Cracteristica:</h3><br>
+                    - ligação á Lan<br>
+                    - possui 4 portas 10/10/1000 Mbps<br>
+                    - possui 1 porta RJ45 Wan<br>
+                    - Remote access<br>
+                    - Ligação a internet
+                    </p>
+                    <br>
+                    <br>
+                    <p>Disponível para levantar imediatamente</p>
+                    <p> Enviamos um codigo de levantamento </p>
+                    <p> Entrega : tem de ser feita na data prevista </p>
+                    <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
+                    <button class="btn-login">adicionar ao Carrinho </button>
+            </div>
+            </div>
 </div>
-<!-- final  codigo login -->
+</section>
 <div class="topnav">
     <table style="width:100%" class="wrap-photo">
         <section class="wrap-photo">
