--- a/descri_produto_ferramentas.html
+++ b/descri_produto_ferramentas.html
@@ -30,7 +30,7 @@
     <li style="float:right"><a href="criar_conta.html">Criar Conta</a></li>
 </ul>
 
-<section>
+<section class="cor2">
     <div class="container">
         <div class="card">
             <div class="imgBox">
