--- a/descri_produto_eletronica.html
+++ b/descri_produto_eletronica.html
@@ -30,21 +30,21 @@
     <li style="float:right"><a href="criar_conta.html">Criar Conta</a></li>
 </ul>
 
-<section>
+<section class="cor2">
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/Router%20DUALBAND.png" alt="Tenis Amarelo" />
+                <img src="img/Router%20DUALBAND.png" alt="router" />
                 <h2>Router DualBand LAN 10/100/1000Mbps</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="carcateristica_produto.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/Placa_de_expansao.png" alt="Tenis Amarelo" />
+                <img src="img/Placa_de_expansao.png" alt="placa" />
                 <h2>Placa de expansão Mini Router </h2>
             </div>
             <div class="content">
@@ -55,7 +55,7 @@
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/switch_24p.png" alt="Tenis Amarelo" />
+                <img src="img/switch_24p.png" alt="switch" />
                 <h2>Switch 24P+4P (SFP) 10/1000Mbps</h2>
             </div>
             <div class="content">
@@ -68,7 +68,7 @@
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/UPS.png" alt="Tenis Amarelo" />
+                <img src="img/UPS.png" alt="ups" />
                 <h2>UPS EATON 9PX 3000i RT2U - 9PX3000IRT2U</h2>
             </div>
             <div class="content">
@@ -78,7 +78,7 @@
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/Impressora_led.png" alt="Tenis Amarelo" />
+                <img src="img/Impressora_led.png" alt="impressora" />
                 <h2>Impressora Brother Multifunções Laser LED Cores</h2>
             </div>
             <div class="content">
@@ -88,7 +88,7 @@
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/projetor%20sony.png" alt="Tenis Amarelo" />
+                <img src="img/projetor%20sony.png" alt="projetor" />
                 <h2>Projetor Sony Home Cinema VPL-VW870ES</h2>
             </div>
             <div class="content">
