--- a/carcateristica_produto.html
+++ b/carcateristica_produto.html
@@ -52,6 +52,7 @@
                     - Ligação a internet
                     </p>
                     <br>
+                    <h3> Valor: 10 € (por semana)  </h3>
                     <br>
                     <p>Disponível para levantar imediatamente</p>
                     <p> Enviamos um codigo de levantamento </p>
