--- a/cacteristica_produto8.html
+++ b/cacteristica_produto8.html
@@ -33,35 +33,33 @@
 
 <!-- inicio codigo login -->
 <section class="da">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox2">
-                    <img src="img/Router%20DUALBAND.png" alt="router" width="320" height="205" />
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="imgBox2">
+                <img src="img/suporte_de_sonda.png" alt="router" />
             </div>
         </div>
-            <div class="card-login2">
-                <h1>Router DualBand LAN 10/100/1000Mbps </h1>
-                <div class="textfield">
-                    <p>
-                    <h3>Cracteristicas:</h3><br>
-                    - Ligação á Lan<br>
-                    - Possui 4 portas 10/10/1000 Mbps<br>
-                    - Possui 1 porta RJ45 Wan<br>
-                    - Remote access<br>
-                    - Ligação a internet
-                    </p>
-                    <br>
-                    <h3> Valor: 10 € (por semana)  </h3>
-                    <br>
-                    <p>Disponível para levantar imediatamente</p>
-                    <p> Enviamos um codigo de levantamento </p>
-                    <p> Entrega : tem de ser feita na data prevista </p>
-                    <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
-                    <button class="btn-login2">adicionar ao Carrinho </button>
-            </div>
-            </div>
-</div>
+    </div>
+    <div class="card-login2">
+        <h1>Suporte para ferro de soldar JBC SL2020 - JBC US1000</h1>
+        <div class="textfield">
+            <p>
+            <h3>Cracteristicas:</h3><br>
+            - compativel com os seguintes ferros JBC:<br>
+            - 30s,40s,65s,SL2020<br>
+
+            </p>
+            <br>
+            <h3> Valor: 10 € (por semana)  </h3>
+            <br>
+            <p>Disponível para levantar imediatamente</p>
+            <p> Enviamos um codigo de levantamento </p>
+            <p> Entrega : tem de ser feita na data prevista </p>
+            <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
+            <button class="btn-login2">adicionar ao Carrinho </button>
+        </div>
+    </div>
+    </div>
 </section>
 <div class="topnav">
     <table style="width:100%" class="wrap-photo">
@@ -83,4 +81,4 @@
 </div>
 
 </body>
-</html>
+</html>>
