--- a/cacteristicas_produtos18.html
+++ b/cacteristicas_produtos18.html
@@ -33,35 +33,38 @@
 
 <!-- inicio codigo login -->
 <section class="da">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox2">
-                    <img src="img/Router%20DUALBAND.png" alt="router" width="320" height="205" />
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="imgBox2">
+                <img src="img/25.png" alt="router" width="320" height="205" />
             </div>
         </div>
-            <div class="card-login2">
-                <h1>Router DualBand LAN 10/100/1000Mbps </h1>
-                <div class="textfield">
-                    <p>
-                    <h3>Cracteristicas:</h3><br>
-                    - Ligação á Lan<br>
-                    - Possui 4 portas 10/10/1000 Mbps<br>
-                    - Possui 1 porta RJ45 Wan<br>
-                    - Remote access<br>
-                    - Ligação a internet
-                    </p>
-                    <br>
-                    <h3> Valor: 10 € (por semana)  </h3>
-                    <br>
-                    <p>Disponível para levantar imediatamente</p>
-                    <p> Enviamos um codigo de levantamento </p>
-                    <p> Entrega : tem de ser feita na data prevista </p>
-                    <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
-                    <button class="btn-login2">adicionar ao Carrinho </button>
-            </div>
-            </div>
-</div>
+    </div>
+    <div class="card-login2">
+        <h1>Máquina automática de cintar à mão "Profi" HU-P1316</h1>
+        <div class="textfield">
+            <p>
+            <h3>Cracteristicas:</h3><br>
+            - Dimensões: 340 x 130 x 118 mm<br>
+            - Peso vazio: 2,7 kg<br>
+            - Peso incl. bateria: 3,2 kg<br>
+            - Bateria: 12 V, 4 A/h<br>
+            - Tensão: até 2800 N<br>
+            - Velocidade de aperto 100-200 mm/seg<br>
+            - Largura da cinta: 13 - 16 mm<br>
+            - Espessura da cinta: 0,5 até 1,2 mm<br>
+            </p>
+            <br>
+            <h3> Valor: 220 € (por semana)  </h3>
+            <br>
+            <p>Disponível para levantar imediatamente</p>
+            <p> Enviamos um codigo de levantamento </p>
+            <p> Entrega : tem de ser feita na data prevista </p>
+            <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
+            <button class="btn-login2">adicionar ao Carrinho </button>
+        </div>
+    </div>
+    </div>
 </section>
 <div class="topnav">
     <table style="width:100%" class="wrap-photo">
