--- a/carcteristica_produto16.html
+++ b/carcteristica_produto16.html
@@ -33,35 +33,40 @@
 
 <!-- inicio codigo login -->
 <section class="da">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox2">
-                    <img src="img/Router%20DUALBAND.png" alt="router" width="320" height="205" />
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="imgBox2">
+                <img src="img/22.png" alt="router" width="320" height="205" />
             </div>
         </div>
-            <div class="card-login2">
-                <h1>Router DualBand LAN 10/100/1000Mbps </h1>
-                <div class="textfield">
-                    <p>
-                    <h3>Cracteristicas:</h3><br>
-                    - Ligação á Lan<br>
-                    - Possui 4 portas 10/10/1000 Mbps<br>
-                    - Possui 1 porta RJ45 Wan<br>
-                    - Remote access<br>
-                    - Ligação a internet
-                    </p>
-                    <br>
-                    <h3> Valor: 10 € (por semana)  </h3>
-                    <br>
-                    <p>Disponível para levantar imediatamente</p>
-                    <p> Enviamos um codigo de levantamento </p>
-                    <p> Entrega : tem de ser feita na data prevista </p>
-                    <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
-                    <button class="btn-login2">adicionar ao Carrinho </button>
-            </div>
-            </div>
-</div>
+    </div>
+    <div class="card-login2">
+        <h1>Fresadora 300x180mm - 5500mw</h1>
+        <div class="textfield">
+            <p>
+            <h3>Cracteristicas:</h3><br>
+            - Potencia: 24V 5.6A<br>
+            - Gravação a Laser: 5500mw<br>
+            - Dimensão do equipamento: 330 × 400 × 240 mm<br>
+            - Area de trabalho: 300 (X) x 180 (Y) x 45 (Z) mm<br>
+            - Velocidade do Spindle: 10000 rpm/min<br>
+            - Motor STEP: Corrente: 1.33A, 12v .; Torque: 0.25N/M<br>
+            - Software de Controlo: GRBL control<br>
+            - Brocas: 10 brocas<br>
+            - Conexão: USB<br>
+            - Sistemas Operativos Compativeis: WinXP, Win7, Win8, Win10<br>
+            </p>
+            <br>
+            <h3> Valor: 100 € (por semana)  </h3>
+            <br>
+            <p>Disponível para levantar imediatamente</p>
+            <p> Enviamos um codigo de levantamento </p>
+            <p> Entrega : tem de ser feita na data prevista </p>
+            <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
+            <button class="btn-login2">adicionar ao Carrinho </button>
+        </div>
+    </div>
+    </div>
 </section>
 <div class="topnav">
     <table style="width:100%" class="wrap-photo">
