--- a/descri_produto_eletronica.html
+++ b/descri_produto_eletronica.html
@@ -34,65 +34,65 @@
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/Router%20DUALBAND.png" alt="router" />
-                <h2>Router DualBand LAN 10/100/1000Mbps</h2>
+                <img src="img/estaçao_de_soda.png" alt="estação soda" />
+                <h2>Estação de soldadura digital 90W</h2>
             </div>
             <div class="content">
-                <a href="carcateristica_produto.html">Requisite Agora</a>
+                <a href="cacteristica_produto7.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/Placa_de_expansao.png" alt="placa" />
-                <h2>Placa de expansão Mini Router </h2>
+                <img src="img/13.png" alt="estaçao" />
+                <h2>Ferro de substituição para estação </h2>
             </div>
             <div class="content">
 
-                <a href="#">Requisite Agora</a>
+                <a href="caracteristica_produto9.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/switch_24p.png" alt="switch" />
-                <h2>Switch 24P+4P (SFP) 10/1000Mbps</h2>
+                <img src="img/suporte_de_sonda.png" alt="suporte" />
+                <h2>Suporte para ferro de soldar JBC SL2020</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="cacteristica_produto8.html">Requisite Agora</a>
             </div>
         </div>
     </div>
 </section>
-<section>
+<section class="cor2">
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/UPS.png" alt="ups" />
-                <h2>UPS EATON 9PX 3000i RT2U - 9PX3000IRT2U</h2>
+                <img src="img/bomba_dessoldadora.png" alt="bomba " />
+                <h2>Bomba Dessoldadora WELLER SA21A</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="caracteristica_produto10.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/Impressora_led.png" alt="impressora" />
-                <h2>Impressora Brother Multifunções Laser LED Cores</h2>
+                <img src="img/lupa_para_soldadura.png" alt="lupa" />
+                <h2>Lupa para Soldadura</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="carcteristica_produto11.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/projetor%20sony.png" alt="projetor" />
-                <h2>Projetor Sony Home Cinema VPL-VW870ES</h2>
+                <img src="img/fonte_bancada.png" alt="fonte bancada" />
+                <h2>Fonte de Bancada</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="cacteristica_produto12.html">Requisite Agora</a>
             </div>
         </div>
     </div>
