--- a/descri_produto_ferramentas.html
+++ b/descri_produto_ferramentas.html
@@ -34,65 +34,65 @@
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/mala.png" alt="Tenis Amarelo" />
+                <img src="img/mala.png" alt="mala" />
                 <h2>Mala de ferramentas completa para eletrónica</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="cacteristica_produto13.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/13.png" alt="Tenis Amarelo" />
-                <h2>Ferro de substituição para estação </h2>
+                <img src="img/18.png" alt="parafusadora" />
+                <h2>Aparafusadora eléctrica sem fio  </h2>
             </div>
             <div class="content">
 
-                <a href="#">Requisite Agora</a>
+                <a href="caracteristica_produto14.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/suporte_de_sonda.png" alt="Tenis Amarelo" />
-                <h2>Suporte para ferro de soldar JBC SL2020</h2>
+                <img src="img/ferramentas_bancada.jpg.png" alt="bancada" />
+                <h2>Bancada De Trabalho Com Painel E Gaveta Para Oficina 120x60x150cm Max</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="carcteristica_produto15.html">Requisite Agora</a>
             </div>
         </div>
     </div>
 </section>
-<section>
+<section class="cor2">
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/bomba_dessoldadora.png" alt="Tenis Amarelo" />
-                <h2>Bomba Dessoldadora WELLER SA21A</h2>
+                <img src="img/25.png" alt="Tenis Amarelo" />
+                <h2>Máquina automática de cintar à mão "Profi" HU-P1316</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="cacteristicas_produtos18.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/lupa_para_soldadura.png" alt="Tenis Amarelo" />
-                <h2>Lupa para Soldadura</h2>
+                <img src="img/22.png" alt="fesadora" />
+                <h2>Fresadora 300x180mm - 5500mw</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="carcteristica_produto16.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/fonte_bancada.png" alt="Tenis Amarelo" />
-                <h2>PFonte de Bancada</h2>
+                <img src="img/23.png" alt="maquina" />
+                <h2>Máquina tira-mossas com mesa de trabalho - 4000 A</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="carcteristicas_produtos17.html">Requisite Agora</a>
             </div>
         </div>
     </div>
