--- a/descri_produto_informatica.html
+++ b/descri_produto_informatica.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,65 +36,65 @@
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/estaçao_de_soda.png" alt="Tenis Amarelo" />
-                <h2>Estação de soldadura digital 90W</h2>
+                <img src="img/Router%20DUALBAND.png" alt="router" />
+                <h2>Router DualBand LAN 10/100/1000Mbps</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="carcateristica_produto.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/13.png" alt="Tenis Amarelo" />
-                <h2>Ferro de substituição para estação </h2>
+                <img src="img/Placa_de_expansao.png" alt="placa" />
+                <h2>Placa de expansão Mini Router </h2>
             </div>
             <div class="content">
 
-                <a href="#">Requisite Agora</a>
+                <a href="cacteristica_produto3.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/suporte_de_sonda.png" alt="Tenis Amarelo" />
-                <h2>Suporte para ferro de soldar JBC SL2020</h2>
+                <img src="img/switch_24p.png" alt="switch" />
+                <h2>Switch 24P+4P (SFP) 10/1000Mbps</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="caracteristicas_produto2.html">Requisite Agora</a>
             </div>
         </div>
     </div>
 </section>
-<section>
+<section class="cor2">
     <div class="container">
         <div class="card">
             <div class="imgBox">
-                <img src="img/bomba_dessoldadora.png" alt="Tenis Amarelo" />
-                <h2>Bomba Dessoldadora WELLER SA21A</h2>
+                <img src="img/UPS.png" alt="ups" />
+                <h2>UPS EATON 9PX 3000i RT2U - 9PX3000IRT2U</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="cacteristica_produto4.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/lupa_para_soldadura.png" alt="Tenis Amarelo" />
-                <h2>Lupa para Soldadura</h2>
+                <img src="img/Impressora_led.png" alt="impressora" />
+                <h2>Impressora Brother Multifunções Laser LED Cores</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="caracteristica_produto5.html">Requisite Agora</a>
             </div>
         </div>
 
         <div class="card">
             <div class="imgBox">
-                <img src="img/fonte_bancada.png" alt="Tenis Amarelo" />
-                <h2>PFonte de Bancada</h2>
+                <img src="img/projetor%20sony.png" alt="projetor" />
+                <h2>Projetor Sony Home Cinema VPL-VW870ES</h2>
             </div>
             <div class="content">
-                <a href="#">Requisite Agora</a>
+                <a href="caracteristica_produto6.html">Requisite Agora</a>
             </div>
         </div>
     </div>
