--- a/caracteristica_produto14.html
+++ b/caracteristica_produto14.html
@@ -33,35 +33,35 @@
 
 <!-- inicio codigo login -->
 <section class="da">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox2">
-                    <img src="img/Router%20DUALBAND.png" alt="router" width="320" height="205" />
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="imgBox2">
+                <img src="img/18.png" alt="router" width="320" height="205" />
             </div>
         </div>
-            <div class="card-login2">
-                <h1>Router DualBand LAN 10/100/1000Mbps </h1>
-                <div class="textfield">
-                    <p>
-                    <h3>Cracteristicas:</h3><br>
-                    - Ligação á Lan<br>
-                    - Possui 4 portas 10/10/1000 Mbps<br>
-                    - Possui 1 porta RJ45 Wan<br>
-                    - Remote access<br>
-                    - Ligação a internet
-                    </p>
-                    <br>
-                    <h3> Valor: 10 € (por semana)  </h3>
-                    <br>
-                    <p>Disponível para levantar imediatamente</p>
-                    <p> Enviamos um codigo de levantamento </p>
-                    <p> Entrega : tem de ser feita na data prevista </p>
-                    <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
-                    <button class="btn-login2">adicionar ao Carrinho </button>
-            </div>
-            </div>
-</div>
+    </div>
+    <div class="card-login2">
+        <h1>Aparafusadora eléctrica sem fio</h1>
+        <div class="textfield">
+            <p>
+            <h3>Cracteristicas:</h3><br>
+            - Tensão [V]: 18<br>
+            - Indicador: com indicador do estado da bateria<br>
+            - Tempo de carga [horas]: 1 (2Ah)<br>
+            - Linha de produtos: AQ-ONE<br>
+            - ROOKS: Aparafusadora eléctrica sem fio<br>
+            </p>
+            <br>
+            <h3> Valor: 35 € (por semana)  </h3>
+            <br>
+            <p>Disponível para levantar imediatamente</p>
+            <p> Enviamos um codigo de levantamento </p>
+            <p> Entrega : tem de ser feita na data prevista </p>
+            <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
+            <button class="btn-login2">adicionar ao Carrinho </button>
+        </div>
+    </div>
+    </div>
 </section>
 <div class="topnav">
     <table style="width:100%" class="wrap-photo">
