--- a/caracteristica_produto9.html
+++ b/caracteristica_produto9.html
@@ -33,35 +33,34 @@
 
 <!-- inicio codigo login -->
 <section class="da">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox2">
-                    <img src="img/Router%20DUALBAND.png" alt="router" width="320" height="205" />
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="imgBox2">
+                <img src="img/13.png" alt="router" width="320" height="205" />
             </div>
         </div>
-            <div class="card-login2">
-                <h1>Router DualBand LAN 10/100/1000Mbps </h1>
-                <div class="textfield">
-                    <p>
-                    <h3>Cracteristicas:</h3><br>
-                    - Ligação á Lan<br>
-                    - Possui 4 portas 10/10/1000 Mbps<br>
-                    - Possui 1 porta RJ45 Wan<br>
-                    - Remote access<br>
-                    - Ligação a internet
-                    </p>
-                    <br>
-                    <h3> Valor: 10 € (por semana)  </h3>
-                    <br>
-                    <p>Disponível para levantar imediatamente</p>
-                    <p> Enviamos um codigo de levantamento </p>
-                    <p> Entrega : tem de ser feita na data prevista </p>
-                    <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
-                    <button class="btn-login2">adicionar ao Carrinho </button>
-            </div>
-            </div>
-</div>
+    </div>
+    <div class="card-login2">
+        <h1>Ferro de substituição para estação de soldadura Ersa RDS 80 - Ersa 0890CDJ </h1>
+        <div class="textfield">
+            <p>
+            <h3>Cracteristicas:</h3><br>
+            - Potência: 80W<br>
+            - Tensão: 24 V<br>
+            - Tempo de aquecimento: 40 segundos<br>
+            - Temperatura maxima da ponta : 450 graus<br>
+            </p>
+            <br>
+            <h3> Valor: 8,5 € (por semana)  </h3>
+            <br>
+            <p>Disponível para levantar imediatamente</p>
+            <p> Enviamos um codigo de levantamento </p>
+            <p> Entrega : tem de ser feita na data prevista </p>
+            <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
+            <button class="btn-login2">adicionar ao Carrinho </button>
+        </div>
+    </div>
+    </div>
 </section>
 <div class="topnav">
     <table style="width:100%" class="wrap-photo">
