--- a/carcteristica_produto15.html
+++ b/carcteristica_produto15.html
@@ -33,35 +33,36 @@
 
 <!-- inicio codigo login -->
 <section class="da">
-        <div class="container">
-            <div class="card">
-                <div class="imgBox2">
-                    <img src="img/Router%20DUALBAND.png" alt="router" width="320" height="205" />
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="imgBox2">
+                <img src="img/ferramentas_bancada.jpg.png" alt="router" width="320" height="205" />
             </div>
         </div>
-            <div class="card-login2">
-                <h1>Router DualBand LAN 10/100/1000Mbps </h1>
-                <div class="textfield">
-                    <p>
-                    <h3>Cracteristicas:</h3><br>
-                    - Ligação á Lan<br>
-                    - Possui 4 portas 10/10/1000 Mbps<br>
-                    - Possui 1 porta RJ45 Wan<br>
-                    - Remote access<br>
-                    - Ligação a internet
-                    </p>
-                    <br>
-                    <h3> Valor: 10 € (por semana)  </h3>
-                    <br>
-                    <p>Disponível para levantar imediatamente</p>
-                    <p> Enviamos um codigo de levantamento </p>
-                    <p> Entrega : tem de ser feita na data prevista </p>
-                    <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
-                    <button class="btn-login2">adicionar ao Carrinho </button>
-            </div>
-            </div>
-</div>
+    </div>
+    <div class="card-login2">
+        <h1>Bancada De Trabalho Com Painel E Gaveta Para Oficina 120x60x150cm Max</h1>
+        <div class="textfield">
+            <p>
+            <h3>Cracteristicas:</h3><br>
+            - Medidas: 120x60x150 cm (comprimento x profundidade x altura)<br>
+            - Painel superior para pendurar ferramentas: 119x60 cm<br>
+            - Superfície de trabalho: 119x59 cm, altura 95 cm<br>
+            - Suporte superior: 119x22 cm<br>
+            - Gaveta: 112x44,5x6,3 cm<br>
+            - Capacidade de carga: 230 kg<br>
+            </p>
+            <br>
+            <h3> Valor: 25 € (por semana)  </h3>
+            <br>
+            <p>Disponível para levantar imediatamente</p>
+            <p> Enviamos um codigo de levantamento </p>
+            <p> Entrega : tem de ser feita na data prevista </p>
+            <p> Obs: havendo possibilidade de multa se não entregue na data prevista </p>
+            <button class="btn-login2">adicionar ao Carrinho </button>
+        </div>
+    </div>
+    </div>
 </section>
 <div class="topnav">
     <table style="width:100%" class="wrap-photo">
